--- a/style.css
+++ b/style.css
@@ -1,13 +1,110 @@
 * {
-    background-color:honeydew;
-    font-family: Arial, Helvetica, sans-serif;
-    border: 0%;
-    margin: 0%;
-    padding: 0%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+    box-sizing: border-box;
+}
 
+:root {
+    background-image: url(/img/Tela-de-computador-exibindo-linguagem-de-informtica.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 header {
-    text-align:center;
-    padding:20px;
+    display: flexbox;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    margin: 0 auto;
+    width: 100%;
+    text-shadow:purple 0.1em 0.1em 0.2em;
+    color: white;
+}
+
+h1 {
+    font-size: 2.5em;
+    text-align: center;
+    margin: 0;
+}
+
+h2 {
+    font-size: 1.5em;
+    text-align: center;
+    margin: 0;
+    padding-top: 5px;
+}
+
+p {
+    font-size: 1.2em;
+    text-align: center;
+    margin: 0;
+    padding-top: 10px;
+}
+
+h3 {
+    font-size: 1.2em;
+    text-align: left;
+    margin: 0;
+    padding-top: 10px;
+    text-shadow: purple 0.1em 0.1em 0.2em;
+    color: white;
+    padding: 20px;
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 20px auto;
+    width: 80%;
+    border-radius: 10px;
+    color: white;
+    font-size: 50px;
+}
+
+article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 20px auto;
+    width: 80%;
+    border-radius: 10px;
+    color: whitesmoke;
+    text-shadow: purple 0.1em 0.1em 0.2em;
+}
+
+aside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 20px auto;
+    width: 80%;
+    border-radius: 10px;
+    color: white;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 20px auto;
+    width: 80%;
+    border-radius: 10px;
+    color: white;
 }
